--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/lodash": "^4.17.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.18.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.533.0",
