--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.18.2",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^164.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.533.0",
     "mammoth": "^1.11.0",
