IMPLEMENT: Google Slides export functionality
Features:
- Complete Google OAuth2 authentication flow
- Google Slides API integration with presentation creation
- Layout-specific content generation for all 5 layouts
- Loading states and error handling
- Popup authentication window
- Automatic presentation opening after creation

Technical Implementation:
- /api/export-google-slides route with POST/GET handlers
- OAuth2Client configuration with proper scopes
- Dynamic slide content based on layout type
- Environment variables for Google credentials
- Comprehensive setup documentation

Components:
- Updated ExportButtons with async authentication
- Loading spinner and disabled states
- Layout-specific data extraction
- Error handling with user feedback

Setup:
- Added Google OAuth environment variables to env.example
- Created GOOGLE_SLIDES_SETUP.md with complete setup guide
- Installed googleapis and google-auth-library packages

Security:
- Proper OAuth2 flow with state parameter
- Secure credential handling via environment variables
- Scoped API access (presentations and drive.file only)

--- a/env.example
+++ b/env.example
@@ -15,3 +15,7 @@ NEXT_PUBLIC_POLAR_PRO_YEARLY_PRODUCT_ID=your-yearly-product-id
 
 # Base URL (update for production)
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Google OAuth Configuration (for Google Slides export)
+GOOGLE_CLIENT_ID=your-google-client-id-here
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
