IMPLEMENT: Chart image export to Google Slides

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.18.2",
     "google-auth-library": "^10.5.0",
     "googleapis": "^164.1.0",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.533.0",
     "mammoth": "^1.11.0",
