fix: Resolve build errors and Vercel deployment issues
- Add missing Index_AgendaGrid3x4 export to Index layout index
- Simplify vercel.json configuration
- Configure Git case sensitivity
- Fix MODULE_NOT_FOUND errors
- Local build now successful

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,9 @@
 {
-  "framework": "nextjs",
   "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm install",
   "functions": {
     "app/api/**/*.ts": {
-      "runtime": "nodejs20.x",
-      "maxDuration": 30
-    }
-  },
-  "env": {
-    "NODE_ENV": "production",
-    "SKIP_ENV_VALIDATION": "true"
-  },
-  "build": {
-    "env": {
-      "SKIP_ENV_VALIDATION": "true"
+      "runtime": "nodejs20.x"
     }
   }
 }
