--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
