--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
       "path": "/api/cron/renew-credits",
       "schedule": "0 0 1 * *"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/success",
+      "destination": "/success.html"
+    }
   ]
 }
