Fix PDF export for Vercel: use @sparticuz/chromium instead of regular puppeteer

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@napi-rs/canvas": "^0.1.81",
     "@next/font": "^14.2.15",
     "@polar-sh/nextjs": "^0.4.11",
+    "@sparticuz/chromium": "^141.0.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/lodash": "^4.17.20",
@@ -34,6 +35,7 @@
     "pdf-merger-js": "^5.1.2",
     "pptxgenjs": "^4.0.1",
     "puppeteer": "^24.27.0",
+    "puppeteer-core": "^24.29.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
